RESOLVED FIXED53358
WKPageGetEstimatedProgress returns wrong value after a mainframe provisional load has started
https://bugs.webkit.org/show_bug.cgi?id=53358
Summary WKPageGetEstimatedProgress returns wrong value after a mainframe provisional ...
Maciej Stachowiak
Reported 2011-01-28 19:28:47 PST
WKPageGetEstimatedProgress returns wrong value after a mainframe provisional load has started
Attachments
Patch (1.51 KB, patch)
2011-01-28 19:34 PST, Maciej Stachowiak
mitz: review+
Maciej Stachowiak
Comment 1 2011-01-28 19:34:17 PST
Maciej Stachowiak
Comment 2 2011-01-28 19:45:25 PST
Note You need to log in before you can comment on or make changes to this bug.