2011-01-28  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Dan Bernstein.

        WKPageGetEstimatedProgress returns wrong value after a mainframe provisional load has started
        https://bugs.webkit.org/show_bug.cgi?id=53358

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::didStartProgress): Start progress at the magic initial value, not 0.


Canonical link: https://commits.webkit.org/67196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77043 268f45cc-cd09-0410-ab3c-d52691b4dbfc